# data-engineering-deployment

./: .env  Dockerfile  README.md  dockerfile-task-3-2  makefile  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
